--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,6 @@
     <com.orbis.materialsearchview.MaterialSearchView
         android:id="@+id/sv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="5dp" />
+        android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
