chore(library): Add internal logic for receiving any query :art: :sparkles: :fire: :recycle: - Add voice icon - Validating hide keyboard when toch back key - update search_layout xml - add new attribute for attrs

--- a/materialsearchview/src/main/res/values/attrs.xml
+++ b/materialsearchview/src/main/res/values/attrs.xml
@@ -2,10 +2,11 @@
 <resources>
     <declare-styleable name="MaterialSearchView">
         <attr name="msvSearchBackground" format="reference" />
-        <attr name="msvHint" format="string"/>
-        <attr name="msvTextColor" format="color"/>
-        <attr name="msvTextColorHint" format="color"/>
+        <attr name="msvHint" format="string" />
+        <attr name="msvTextColor" format="color" />
+        <attr name="msvTextColorHint" format="color" />
         <attr name="msvIsContainEnabled" format="boolean" />
         <attr name="msvHideShadow" format="boolean" />
+        <attr name="msvShowVoiceIcon" format="boolean" />
     </declare-styleable>
 </resources>
