--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
     <com.orbis.materialsearchview.MaterialSearchView
         android:id="@+id/sv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:msvShowVoiceIcon="true"/>
 
 </android.support.design.widget.CoordinatorLayout>
